--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
 
     <main id="content">
     </main>
+	<script> 
 
+	</script>
     <script type="module" src="src/app.js"></script>
   </body>
 </html> 
